# src/main/java/org/acme/features/market/merchant/domain/rule/MerchantActionType.java
@@ -18,7 +18,15 @@ public enum MerchantActionType {
   /**
    * @autogenerated ActionTypeGenerator
    */
-  DELETE(false, true, false);
+  DELETE(false, true, false),
+  /**
+   * @autogenerated ActionTypeGenerator
+   */
+  ENABLE(false, false, true),
+  /**
+   * @autogenerated ActionTypeGenerator
+   */
+  DISABLE(false, false, true);
 
   /**
    * @autogenerated ActionTypeGenerator
