# src/main/java/org/acme/features/market/merchant/infrastructure/driver/rest/MerchantController.java
@@ -13,16 +13,22 @@ import org.acme.common.security.Connection;
 import org.acme.features.market.merchant.application.interaction.MerchantDto;
 import org.acme.features.market.merchant.application.interaction.command.MerchantCreateCommand;
 import org.acme.features.market.merchant.application.interaction.command.MerchantDeleteCommand;
+import org.acme.features.market.merchant.application.interaction.command.MerchantDisableCommand;
+import org.acme.features.market.merchant.application.interaction.command.MerchantEnableCommand;
 import org.acme.features.market.merchant.application.interaction.command.MerchantUpdateCommand;
 import org.acme.features.market.merchant.application.interaction.query.MerchantListQuery;
 import org.acme.features.market.merchant.application.interaction.query.MerchantRetrieveQuery;
 import org.acme.features.market.merchant.application.interaction.result.MerchantCreateResult;
 import org.acme.features.market.merchant.application.interaction.result.MerchantDeleteResult;
+import org.acme.features.market.merchant.application.interaction.result.MerchantDisableResult;
+import org.acme.features.market.merchant.application.interaction.result.MerchantEnableResult;
 import org.acme.features.market.merchant.application.interaction.result.MerchantListResult;
 import org.acme.features.market.merchant.application.interaction.result.MerchantRetrieveResult;
 import org.acme.features.market.merchant.application.interaction.result.MerchantUpdateResult;
 import org.acme.features.market.merchant.application.usecase.CreateMerchantUsecase;
 import org.acme.features.market.merchant.application.usecase.DeleteMerchantUsecase;
+import org.acme.features.market.merchant.application.usecase.DisableMerchantUsecase;
+import org.acme.features.market.merchant.application.usecase.EnableMerchantUsecase;
 import org.acme.features.market.merchant.application.usecase.ListMerchantUsecase;
 import org.acme.features.market.merchant.application.usecase.RetrieveMerchantUsecase;
 import org.acme.features.market.merchant.application.usecase.UpdateMerchantUsecase;
@@ -52,6 +58,16 @@ public class MerchantController implements MerchantApi {
    * @autogenerated ApiControllerGenerator
    */
   private final DeleteMerchantUsecase delete;
+
+  /**
+   * @autogenerated ApiControllerGenerator
+   */
+  private final DisableMerchantUsecase disable;
+
+  /**
+   * @autogenerated ApiControllerGenerator
+   */
+  private final EnableMerchantUsecase enable;
 
   /**
    * @autogenerated ApiControllerGenerator
@@ -106,6 +122,50 @@ public class MerchantController implements MerchantApi {
       Optional<MerchantDto> merchant =
           result.getMerchant().toCompletableFuture().get(1, TimeUnit.SECONDS);
       return merchant.map(res -> Response.ok(toApiModel(res)).build())
+          .orElseGet(() -> Response.status(404).build());
+    } catch (InterruptedException | ExecutionException | TimeoutException e) {
+      e.printStackTrace();
+      return Response.serverError().build();
+    }
+  }
+
+  /**
+   * @autogenerated ApiControllerGenerator
+   * @param uid
+   * @return
+   */
+  @Override
+  public Response merchantApiDisable(final String uid) {
+    Actor actor = new Actor();
+    Connection connection = new Connection();
+    MerchantDisableResult result = disable.disable(MerchantDisableCommand.builder().actor(actor)
+        .connection(connection).reference(MerchantReference.of(uid)).build());
+    try {
+      Optional<MerchantDto> outputMerchant =
+          result.getMerchant().toCompletableFuture().get(1, TimeUnit.SECONDS);
+      return outputMerchant.map(res -> Response.ok(toApiModel(res)).build())
+          .orElseGet(() -> Response.status(404).build());
+    } catch (InterruptedException | ExecutionException | TimeoutException e) {
+      e.printStackTrace();
+      return Response.serverError().build();
+    }
+  }
+
+  /**
+   * @autogenerated ApiControllerGenerator
+   * @param uid
+   * @return
+   */
+  @Override
+  public Response merchantApiEnable(final String uid) {
+    Actor actor = new Actor();
+    Connection connection = new Connection();
+    MerchantEnableResult result = enable.enable(MerchantEnableCommand.builder().actor(actor)
+        .connection(connection).reference(MerchantReference.of(uid)).build());
+    try {
+      Optional<MerchantDto> outputMerchant =
+          result.getMerchant().toCompletableFuture().get(1, TimeUnit.SECONDS);
+      return outputMerchant.map(res -> Response.ok(toApiModel(res)).build())
           .orElseGet(() -> Response.status(404).build());
     } catch (InterruptedException | ExecutionException | TimeoutException e) {
       e.printStackTrace();
